View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024065 | Open CASCADE | OCCT:Modeling Algorithms | public | 2013-07-11 15:37 | 2013-12-19 13:57 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.6.0 | ||||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0024065: Wrong intersection point | ||||
Description | Intersection point between attached curve and surface is wrong. The problem has been detected in the test case bugs modalg_2 bug239_2. | ||||
Steps To Reproduce | restore f.brep f restore e.brep e mksurface s f mkcurve c e intersect i c s projponf f i_2 #proj dist = 6.0298589392945979e-006 xdist c s 0 1 100 cvalue c 0.30303 X Y Z point p X Y Z projponf f p #proj dist = 2.0458970352054304e-008 #in the result should point p instead of i_2 | ||||
Tags | No tags attached. | ||||
Test case number | bugs moddata_3(013) bug24065 | ||||
2013-07-11 15:37 developer |
f.brep (70,797 bytes) |
2013-07-11 15:37 developer |
e.brep (24,716 bytes) |
|
Branch CR24065 is created for rew. |
|
Ok |
|
Dear BugMaster, Branch CR24065 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: f43ffa6ee81287ee55da8c40c865358cc5e8920e Number of compiler warnings: occt component : Linux: 916 (917 on master) Windows: 855 (855 on master) products component : Linux: 188 (188 on master) Windows: 287 (287 on master) Regressions: http://occt-tests/CR24065-master-occt/Debian60-64/bugs/modalg_1/bug10232.html http://occt-tests/CR24065-master-occt/Windows-32-VC9/bugs/modalg_1/bug10232.html bugs modalg_1 bug10232 - new length of result shape http://occt-tests/CR24065-master-occt/Debian60-64/bugs/modalg_2/bug239_2.html http://occt-tests/CR24065-master-occt/Windows-32-VC9/bugs/modalg_2/bug239_2.html bugs modalg_2 bug239_2 - new length of result shape Improvements: No improvements Testing cases: bugs moddata_3(013) bug24065 - OK. Testing on Linux: Total MEMORY difference: 363497700 / 363214852 Total CPU difference: 58780.270000000586 / 49125.790000000496 Testing on Windows: Total MEMORY difference: 424267232 / 424364848 Total CPU difference: 40447.03125 / 32226.875 There are not differences in images found by testdiff. http://occt-tests/CR24065-master-occt/Debian60-64/diff-Debian60-64.html http://occt-tests/CR24065-master-occt/Windows-32-VC9/diff-Windows-32-VC9.html IMAGE bugs modalg_2 bug239_1: bug239_1.png differs IMAGE bugs modalg_2 bug23: bug239_2.png differs |
|
Dear EMV, as far as I understand, regression bugs modalg_2 bug239_2 is really improvement - it is the same case which you reported in bug. Now result is shorter because of more correct cutting initial wire by solid. What about regression bugs modalg_1 bug10232? Since nobody knows what is correct result, give please you expert conclusion about this case. I think that we must concider new results as correct ones and change values used in tests for checking results. What is your opinion? |
|
Dear colleagues, I have analyzed these two cases and my opinion coincides with IFV's opinion. bugs modalg_2 bug239_2 - now result is shorter because of more correct cutting. bugs modalg_1 bug10232 - now result is longer because there are some new section edges created which current version of OCCT is unable to create. For example, try in DRAW: restore [locate_data_file OCC10232_ms1.brep] b1 restore [locate_data_file OCC10232_ms2.brep] b2 explode b1 f; copy b1_109 b1 explode b2 f; copy b2_109 b2 bop b1 b2 bopsection r Thus, dear MKV please change values used in these test scripts for checking results. |
|
Dear emv, There are different results on Linux and Windows platforms in bugs modalg_1 bug10232 http://occt-tests/CR24065-master-occt/Debian60-64/bugs/modalg_1/bug10232.html http://occt-tests/CR24065-master-occt/Windows-32-VC9/bugs/modalg_1/bug10232.html |
|
I suggest to integrate this fix in spite of result of bugs modalg_1 bug10232 for following reasons: 1. this test was wrong in muster and probably remains wrong after fix because nobody knows correct result for this test. 2. Fixing this test will take rather much time (if success can be reached at all) So I suggest to use different values of length for Windows and Linux (it is better to remove this test at all) - fix for bug is really useful and more important then results of useless test. |
|
Eugene, can you explain why results are different for Linux and Windows (if I understand correctly, it was not like that before the fix)? |
|
Actually, it was. Here are the results of tests from IR-2013-08-22-master-occt: 1. Debian60-64 - length is 3200.06 ( http://occt-tests/IR-2013-08-22-master-occt/Debian60-64/bugs/modalg_1/bug10232.html ); 2. Windows-32-VC9 - length is 3202.9 ( http://occt-tests/IR-2013-08-22-master-occt/Windows-32-VC9/bugs/modalg_1/bug10232.html ). |
|
Dear BugMaster, Test cases bugs/modalg_1(006)/bug10232 and bugs/modalg_2(007)/bug239_2 was corrected and pushed to git repository in branch CR24065. |
occt: master 4355f260 2013-08-29 09:30:41
Committer: bugmaster Details Diff |
0024065: Wrong intersection point Adding test case for issue CR24065 Small corrections of test cases |
Affected Issues 0024065 |
|
mod - src/IntAna/IntAna_QuadQuadGeo.cxx | Diff File | ||
mod - tests/bugs/modalg_1/bug10232 | Diff File | ||
mod - tests/bugs/modalg_2/bug239_2 | Diff File | ||
add - tests/bugs/moddata_3/bug24065 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-07-11 15:37 |
|
New Issue | |
2013-07-11 15:37 |
|
Assigned To | => ifv |
2013-07-11 15:37 |
|
File Added: f.brep | |
2013-07-11 15:37 |
|
File Added: e.brep | |
2013-08-13 18:48 |
|
Note Added: 0025295 | |
2013-08-13 18:48 |
|
Status | new => resolved |
2013-08-13 18:48 |
|
Note Added: 0025296 | |
2013-08-13 18:48 |
|
Status | resolved => reviewed |
2013-08-13 19:06 |
|
Assigned To | ifv => mkv |
2013-08-15 09:21 |
|
Note Added: 0025310 | |
2013-08-15 09:22 |
|
Test case number | => bugs moddata_3(013) bug24065 |
2013-08-15 09:22 |
|
Assigned To | mkv => ifv |
2013-08-15 09:22 |
|
Status | reviewed => assigned |
2013-08-15 15:40 |
|
Note Added: 0025322 | |
2013-08-15 15:40 |
|
Assigned To | ifv => emv |
2013-08-15 15:40 |
|
Status | assigned => feedback |
2013-08-15 18:13 |
|
Note Added: 0025324 | |
2013-08-15 18:13 |
|
Assigned To | emv => mkv |
2013-08-15 18:14 |
|
Note Edited: 0025324 | |
2013-08-15 18:17 |
|
Note Edited: 0025324 | |
2013-08-16 12:09 |
|
Note Added: 0025328 | |
2013-08-16 12:09 |
|
Assigned To | mkv => emv |
2013-08-26 10:47 |
|
Assigned To | emv => ifv |
2013-08-27 10:52 |
|
Note Added: 0025387 | |
2013-08-27 10:52 |
|
Status | feedback => reviewed |
2013-08-27 16:57 |
|
Note Added: 0025390 | |
2013-08-27 16:57 |
|
Assigned To | ifv => emv |
2013-08-27 16:57 |
|
Status | reviewed => feedback |
2013-08-27 17:54 |
|
Assigned To | emv => mkv |
2013-08-27 17:55 |
|
Note Added: 0025392 | |
2013-08-27 18:26 |
|
Note Edited: 0025392 | |
2013-08-27 20:28 |
|
Note Added: 0025397 | |
2013-08-27 20:28 |
|
Assigned To | mkv => bugmaster |
2013-08-27 20:28 |
|
Status | feedback => tested |
2013-08-28 14:33 | bugmaster | Target Version | => 6.7.0 |
2013-09-03 12:22 | bugmaster | Changeset attached | => occt master 4355f260 |
2013-09-03 12:22 | bugmaster | Status | tested => verified |
2013-09-03 12:22 | bugmaster | Resolution | open => fixed |
2013-12-19 13:52 | bugmaster | Status | verified => closed |
2013-12-19 13:57 | bugmaster | Fixed in Version | => 6.7.0 |