0024065: Wrong intersection point

Adding test case for issue CR24065

Small corrections of test cases